--- a/P_Median_Problem.ipynb
+++ b/P_Median_Problem.ipynb
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "h5fsiqHicfqO",
-        "outputId": "fd68448f-880c-496b-df43-54135b276e63",
+        "outputId": "76ffd6fa-4ab9-4dd1-b49a-26b2dc323355",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -95,16 +95,16 @@
         {
           "output_type": "stream",
           "text": [
-            "--2020-11-10 18:23:00--  https://repo.anaconda.com/miniconda/Miniconda3-4.5.4-Linux-x86_64.sh\n",
-            "Resolving repo.anaconda.com (repo.anaconda.com)... 104.16.130.3, 104.16.131.3, 2606:4700::6810:8203, ...\n",
-            "Connecting to repo.anaconda.com (repo.anaconda.com)|104.16.130.3|:443... connected.\n",
+            "--2020-11-10 19:37:40--  https://repo.anaconda.com/miniconda/Miniconda3-4.5.4-Linux-x86_64.sh\n",
+            "Resolving repo.anaconda.com (repo.anaconda.com)... 104.16.131.3, 104.16.130.3, 2606:4700::6810:8303, ...\n",
+            "Connecting to repo.anaconda.com (repo.anaconda.com)|104.16.131.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 58468498 (56M) [application/x-sh]\n",
             "Saving to: ‘Miniconda3-4.5.4-Linux-x86_64.sh’\n",
             "\n",
-            "Miniconda3-4.5.4-Li 100%[===================>]  55.76M   140MB/s    in 0.4s    \n",
+            "Miniconda3-4.5.4-Li 100%[===================>]  55.76M   146MB/s    in 0.4s    \n",
             "\n",
-            "2020-11-10 18:23:01 (140 MB/s) - ‘Miniconda3-4.5.4-Linux-x86_64.sh’ saved [58468498/58468498]\n",
+            "2020-11-10 19:37:40 (146 MB/s) - ‘Miniconda3-4.5.4-Linux-x86_64.sh’ saved [58468498/58468498]\n",
             "\n",
             "PREFIX=/usr/local\n",
             "installing: python-3.6.5-hc3d631a_2 ...\n",
@@ -163,26 +163,26 @@
             "\n",
             "    package                    |            build\n",
             "    ---------------------------|-----------------\n",
-            "    ncurses-6.2                |       he6710b0_1         1.1 MB\n",
-            "    zlib-1.2.11                |       h7b6447c_3         120 KB\n",
-            "    ujson-4.0.1                |   py36he6710b0_0          48 KB\n",
-            "    setuptools-50.3.1          |   py36h06a4308_1         900 KB\n",
-            "    libgcc-ng-9.1.0            |       hdf63c60_0         8.1 MB\n",
-            "    libffi-3.3                 |       he6710b0_2          54 KB\n",
-            "    pip-20.2.4                 |   py36h06a4308_0         2.1 MB\n",
-            "    certifi-2020.6.20          |     pyhd3eb1b0_3         159 KB\n",
-            "    openssl-1.1.1h             |       h7b6447c_0         3.8 MB\n",
-            "    readline-8.0               |       h7b6447c_0         428 KB\n",
-            "    xz-5.2.5                   |       h7b6447c_0         438 KB\n",
-            "    python-3.6.12              |       hcff3b4d_2        34.0 MB\n",
-            "    libstdcxx-ng-9.1.0         |       hdf63c60_0         4.0 MB\n",
-            "    ld_impl_linux-64-2.33.1    |       h53a641e_7         645 KB\n",
-            "    wheel-0.35.1               |             py_0          36 KB\n",
-            "    libedit-3.1.20191231       |       h14c3975_1         121 KB\n",
-            "    tk-8.6.10                  |       hbc83047_0         3.2 MB\n",
-            "    _libgcc_mutex-0.1          |             main           3 KB\n",
             "    sqlite-3.33.0              |       h62c20be_0         2.0 MB\n",
+            "    ujson-4.0.1                |   py36he6710b0_0          48 KB\n",
+            "    ld_impl_linux-64-2.33.1    |       h53a641e_7         645 KB\n",
+            "    ncurses-6.2                |       he6710b0_1         1.1 MB\n",
+            "    libedit-3.1.20191231       |       h14c3975_1         121 KB\n",
+            "    _libgcc_mutex-0.1          |             main           3 KB\n",
+            "    zlib-1.2.11                |       h7b6447c_3         120 KB\n",
+            "    setuptools-50.3.1          |   py36h06a4308_1         900 KB\n",
+            "    libffi-3.3                 |       he6710b0_2          54 KB\n",
+            "    tk-8.6.10                  |       hbc83047_0         3.2 MB\n",
             "    ca-certificates-2020.10.14 |                0         128 KB\n",
+            "    python-3.6.12              |       hcff3b4d_2        34.0 MB\n",
+            "    xz-5.2.5                   |       h7b6447c_0         438 KB\n",
+            "    wheel-0.35.1               |             py_0          36 KB\n",
+            "    libgcc-ng-9.1.0            |       hdf63c60_0         8.1 MB\n",
+            "    libstdcxx-ng-9.1.0         |       hdf63c60_0         4.0 MB\n",
+            "    certifi-2020.6.20          |     pyhd3eb1b0_3         159 KB\n",
+            "    pip-20.2.4                 |   py36h06a4308_0         2.1 MB\n",
+            "    readline-8.0               |       h7b6447c_0         428 KB\n",
+            "    openssl-1.1.1h             |       h7b6447c_0         3.8 MB\n",
             "    ------------------------------------------------------------\n",
             "                                           Total:        61.4 MB\n",
             "\n",
@@ -224,7 +224,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "VIXIviIBL0Uw",
-        "outputId": "0b24264a-acf0-4f8f-9177-621707c36ea6",
+        "outputId": "da313093-ad9b-47bc-ecac-8a8701815824",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -238,7 +238,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Solving environment: - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\bdone\n",
+            "Solving environment: - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\bdone\n",
             "\n",
             "\n",
             "==> WARNING: A newer version of conda exists. <==\n",
@@ -264,14 +264,14 @@
             "\n",
             "    package                    |            build\n",
             "    ---------------------------|-----------------\n",
-            "    cryptography-3.1.1         |   py36h1ba5d50_0         612 KB\n",
-            "    requests-2.24.0            |             py_0          54 KB\n",
-            "    urllib3-1.25.11            |             py_0          93 KB\n",
             "    cffi-1.14.3                |   py36he30daa8_0         224 KB\n",
-            "    docplex-2.16.196           |           py36_0        1011 KB  ibmdecisionoptimization\n",
-            "    cplex-12.10                |           py36_0        25.9 MB  ibmdecisionoptimization\n",
-            "    pyopenssl-19.1.0           |             py_1          47 KB\n",
             "    brotlipy-0.7.0             |py36h7b6447c_1000         348 KB\n",
+            "    cplex-12.10                |           py36_0        25.9 MB  ibmdecisionoptimization\n",
+            "    requests-2.24.0            |             py_0          54 KB\n",
+            "    pyopenssl-19.1.0           |             py_1          47 KB\n",
+            "    cryptography-3.1.1         |   py36h1ba5d50_0         612 KB\n",
+            "    urllib3-1.25.11            |             py_0          93 KB\n",
+            "    docplex-2.16.196           |           py36_0        1011 KB  ibmdecisionoptimization\n",
             "    ------------------------------------------------------------\n",
             "                                           Total:        28.2 MB\n",
             "\n",
@@ -291,17 +291,17 @@
             "\n",
             "\n",
             "Downloading and Extracting Packages\n",
-            "cryptography-3.1.1   |  612 KB | : 100% 1.0/1 [00:00<00:00,  2.74it/s]               \n",
-            "requests-2.24.0      |   54 KB | : 100% 1.0/1 [00:00<00:00, 18.59it/s]\n",
-            "urllib3-1.25.11      |   93 KB | : 100% 1.0/1 [00:00<00:00, 14.25it/s]\n",
-            "cffi-1.14.3          |  224 KB | : 100% 1.0/1 [00:00<00:00,  8.56it/s]\n",
-            "docplex-2.16.196     | 1011 KB | : 100% 1.0/1 [00:01<00:00,  1.65s/it]               \n",
-            "cplex-12.10          | 25.9 MB | : 100% 1.0/1 [00:08<00:00,  8.65s/it]               \n",
-            "pyopenssl-19.1.0     |   47 KB | : 100% 1.0/1 [00:00<00:00, 20.00it/s]\n",
-            "brotlipy-0.7.0       |  348 KB | : 100% 1.0/1 [00:00<00:00, 10.24it/s]\n",
+            "cffi-1.14.3          |  224 KB | : 100% 1.0/1 [00:00<00:00,  5.90it/s]              \n",
+            "brotlipy-0.7.0       |  348 KB | : 100% 1.0/1 [00:00<00:00,  8.86it/s]\n",
+            "cplex-12.10          | 25.9 MB | : 100% 1.0/1 [00:06<00:00,  6.98s/it]               \n",
+            "requests-2.24.0      |   54 KB | : 100% 1.0/1 [00:00<00:00, 17.23it/s]\n",
+            "pyopenssl-19.1.0     |   47 KB | : 100% 1.0/1 [00:00<00:00, 19.88it/s]\n",
+            "cryptography-3.1.1   |  612 KB | : 100% 1.0/1 [00:00<00:00,  3.10it/s]               \n",
+            "urllib3-1.25.11      |   93 KB | : 100% 1.0/1 [00:00<00:00, 12.81it/s]\n",
+            "docplex-2.16.196     | 1011 KB | : 100% 1.0/1 [00:00<00:00,  1.60it/s]               \n",
             "Preparing transaction: | \b\bdone\n",
-            "Verifying transaction: - \b\b\\ \b\b| \b\b/ \b\b- \b\bdone\n",
-            "Executing transaction: | \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\bdone\n"
+            "Verifying transaction: - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\bdone\n",
+            "Executing transaction: / \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\bdone\n"
           ],
           "name": "stdout"
         }
@@ -364,7 +364,7 @@
         "n = len(d)\n",
         "p = 5"
       ],
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -380,7 +380,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "78d7jj5tPLOB",
-        "outputId": "146e838a-65fb-466d-f9b0-5a99892554b3",
+        "outputId": "2f41dd43-48de-45e5-d6a3-7832a14a4620",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -413,7 +413,7 @@
         "else:\n",
         "    print(\"Nenhuma solução encontrada\")"
       ],
-      "execution_count": 23,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +424,7 @@
             "Model constraints: 421, variables: integer: 420, interval: 0, sequence: 0\n",
             "Solve status: Feasible\n",
             "Search status: SearchStopped, stop cause: SearchStoppedByLimit\n",
-            "Solve time: 60.05 sec\n",
+            "Solve time: 60.03 sec\n",
             "-------------------------------------------------------------------------------\n",
             "Objective values: (4242.6,), bounds: (282.825,), gaps: (0.933337,)\n",
             "X[0][0] 0=0\n",
